update va sua loi